Add styles for movie screen

--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -18,7 +18,7 @@
 
     <TextView
         android:id="@+id/tv_movie_language"
-        style="@style/AppTheme.TextView.Small.White"
+        style="@style/AppTheme.TextView.Movie.Language"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -29,6 +29,7 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_movie_name"
+        style="@style/AppTheme.TextView.Movie.Title"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginLeft="16dp"
@@ -36,11 +37,8 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
         android:ellipsize="end"
-        android:fontFamily="@font/roboto_medium"
         android:gravity="left|bottom"
         android:maxLines="3"
-        android:textColor="@color/white_color"
-        android:textStyle="normal"
         app:layout_constraintBottom_toTopOf="@+id/tv_movie_genre"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +48,7 @@
 
     <TextView
         android:id="@+id/tv_movie_genre"
-        style="@style/AppTheme.TextView.Small.White"
+        style="@style/AppTheme.TextView.Movie.Genre"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -58,7 +56,6 @@
         android:layout_marginBottom="24dp"
         android:ellipsize="marquee"
         android:singleLine="true"
-        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/shadow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
