Update metro colors and Cinema Title

--- a/app/src/main/res/drawable-night/movie_shadow_background.xml
+++ b/app/src/main/res/drawable-night/movie_shadow_background.xml
@@ -37,7 +37,7 @@
                             android:offset="0.276" />
 
                         <item
-                            android:color="#121212"
+                            android:color="#E6121212"
                             android:offset="1" />
 
                     </gradient>
