--- a/app/src/main/res/layout/item_cinema.xml
+++ b/app/src/main/res/layout/item_cinema.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/tv_cinema_name"
-        style="@style/AppTheme.TextView.ExtraHuge.Black"
+        style="@style/AppTheme.TextView.Cinema.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Формула Кино Галерея" />
