--- a/app/src/main/res/layout/item_screenings.xml
+++ b/app/src/main/res/layout/item_screenings.xml
@@ -29,13 +29,12 @@
 
         <TextView
             android:id="@+id/tv_info"
-            style="@style/AppTheme.TextView.Medium.Black.Subtitle"
+            style="@style/AppTheme.TextView.Common.Subtitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textSize="13sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/tv_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_title"
