--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -16,7 +16,7 @@
 
     <color name="title_color">#E1E1E1</color>
     <color name="subtitle_color">#A4A4A4</color>
-    <color name="settings_color">#B7AEB5</color>
+    <color name="settings_color">#E1E1E1</color>
 
     <color name="status_bar_color">#121212</color>
 
