--- a/app/src/main/res/layout/item_setting_2_lines.xml
+++ b/app/src/main/res/layout/item_setting_2_lines.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:background="@drawable/selectable_item_bg"
-    android:padding="16dp">
+    android:layout_height="60dp"
+    android:background="@drawable/selectable_item_bg">
 
     <ImageView
         android:id="@+id/iv_setting_icon"
         style="@style/AppTheme.Image.Setting"
         android:layout_gravity="center_vertical"
+        android:layout_marginLeft="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,11 +22,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
         android:ellipsize="end"
+        android:includeFontPadding="false"
         android:lines="1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tv_settings_subtitle"
         app:layout_constraintStart_toEndOf="@+id/iv_setting_icon"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Скоро в прокате" />
+
+    <TextView
+        android:id="@+id/tv_settings_subtitle"
+        style="@style/AppTheme.TextView.Setting.Subtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:includeFontPadding="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tv_setting_title"
+        app:layout_constraintTop_toBottomOf="@+id/tv_setting_title"
+        tools:text="Санкт-Петербург" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
