--- a/app/src/main/res/layout/item_screening.xml
+++ b/app/src/main/res/layout/item_screening.xml
@@ -2,8 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="76dp"
-    android:layout_height="76dp"
+    android:layout_width="@dimen/screenings_size"
+    android:layout_height="@dimen/screenings_size"
     app:cardBackgroundColor="@color/screening_bg_color">
 
     <androidx.constraintlayout.widget.ConstraintLayout
