--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,8 +6,9 @@
     <dimen name="default_action_bar_size">56dp</dimen>
     <dimen name="default_status_bar_size">24dp</dimen>
     <dimen name="map_bottom_sheet_height">160dp</dimen>
-    <dimen name="screenings_padding">16dp</dimen>
 
+    <dimen name="screenings_padding">16dp</dimen>
+    <dimen name="screenings_size">76dp</dimen>
     <dimen name="screening_horizontal_margin">8dp</dimen>
     <dimen name="screening_vertical_margin">5dp</dimen>
 
