--- a/app/src/main/res/layout/item_movie_info.xml
+++ b/app/src/main/res/layout/item_movie_info.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="8dp"
     android:paddingLeft="16dp"
+    android:paddingTop="8dp"
     android:paddingRight="16dp"
-    android:paddingTop="8dp">
+    android:paddingBottom="8dp">
 
     <TextView
         android:id="@+id/tv_genre_title"
-        style="@style/AppTheme.TextView.Medium.Black.Bold"
+        style="@style/AppTheme.TextView.MovieInfo.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/movie_genre_title"
@@ -20,7 +20,7 @@
 
     <TextView
         android:id="@+id/tv_genre_value"
-        style="@style/AppTheme.TextView.Medium.Black"
+        style="@style/AppTheme.TextView.MovieInfo.Subtitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="2dp"
@@ -31,7 +31,7 @@
 
     <TextView
         android:id="@+id/tv_language_title"
-        style="@style/AppTheme.TextView.Medium.Black.Bold"
+        style="@style/AppTheme.TextView.MovieInfo.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -41,7 +41,7 @@
 
     <TextView
         android:id="@+id/tv_language_value"
-        style="@style/AppTheme.TextView.Medium.Black"
+        style="@style/AppTheme.TextView.MovieInfo.Subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="2dp"
@@ -51,7 +51,7 @@
 
     <TextView
         android:id="@+id/tv_durability_title"
-        style="@style/AppTheme.TextView.Medium.Black.Bold"
+        style="@style/AppTheme.TextView.MovieInfo.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -61,7 +61,7 @@
 
     <TextView
         android:id="@+id/tv_durability_value"
-        style="@style/AppTheme.TextView.Medium.Black"
+        style="@style/AppTheme.TextView.MovieInfo.Subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="2dp"
@@ -71,7 +71,7 @@
 
     <TextView
         android:id="@+id/tv_age_title"
-        style="@style/AppTheme.TextView.Medium.Black.Bold"
+        style="@style/AppTheme.TextView.MovieInfo.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -81,7 +81,7 @@
 
     <TextView
         android:id="@+id/tv_age_value"
-        style="@style/AppTheme.TextView.Medium.Black"
+        style="@style/AppTheme.TextView.MovieInfo.Subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="2dp"
@@ -91,7 +91,7 @@
 
     <TextView
         android:id="@+id/tv_rating_title"
-        style="@style/AppTheme.TextView.Medium.Black.Bold"
+        style="@style/AppTheme.TextView.MovieInfo.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -101,7 +101,7 @@
 
     <TextView
         android:id="@+id/tv_rating_value"
-        style="@style/AppTheme.TextView.Medium.Black"
+        style="@style/AppTheme.TextView.MovieInfo.Subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="2dp"
@@ -111,7 +111,7 @@
 
     <TextView
         android:id="@+id/tv_description_title"
-        style="@style/AppTheme.TextView.Huge.Black.Bold"
+        style="@style/AppTheme.TextView.Huge.Black.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -121,7 +121,7 @@
 
     <TextView
         android:id="@+id/tv_description_value"
-        style="@style/AppTheme.TextView.Medium.Black"
+        style="@style/AppTheme.TextView.MovieInfo.Subtitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
