--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -15,6 +15,7 @@
     <color name="bottom_bar_background_color">#232323</color>
 
     <color name="title_color">#E1E1E1</color>
+    <color name="icon_color">#E1E1E1</color>
     <color name="subtitle_color">#A4A4A4</color>
     <color name="settings_color">#E1E1E1</color>
 
