--- a/app/src/main/res/layout/item_cinema_info_2.xml
+++ b/app/src/main/res/layout/item_cinema_info_2.xml
@@ -7,15 +7,23 @@
     android:orientation="vertical"
     android:paddingTop="8dp">
 
+    <View
+        android:id="@+id/drag_item"
+        android:layout_width="56dp"
+        android:layout_height="4dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/drag_cinema_map_bg" />
+
     <TextView
         android:id="@+id/tv_cinema_name"
         style="@style/AppTheme.TextView.Huge.Black.Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="8dp"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp"
         android:paddingTop="4dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
