--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="poster_text_size">24sp</dimen>
     <dimen name="poster_text_size_middle">36sp</dimen>
+    <dimen name="poster_text_size_large">42sp</dimen>
     <dimen name="poster_text_size_huge">48sp</dimen>
     <dimen name="default_action_bar_size">56dp</dimen>
     <dimen name="default_status_bar_size">24dp</dimen>
