--- a/app/src/main/res/layout/fragment_donate.xml
+++ b/app/src/main/res/layout/fragment_donate.xml
@@ -27,7 +27,7 @@
 
     <TextView
         android:id="@+id/tv_donate_message"
-        style="@style/AppTheme.TextView.Large.Black"
+        style="@style/AppTheme.TextView.Large.Title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -40,7 +40,7 @@
 
     <TextView
         android:id="@+id/tv_donate_types"
-        style="@style/AppTheme.TextView.Large.Black"
+        style="@style/AppTheme.TextView.Large.Title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
