--- a/app/src/main/res/layout/item_divider_title.xml
+++ b/app/src/main/res/layout/item_divider_title.xml
@@ -11,7 +11,7 @@
 
     <TextView
         android:id="@+id/tv_divider_title"
-        style="@style/AppTheme.TextView.Huge.Black.Title"
+        style="@style/AppTheme.TextView.Huge.Title.Bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
