--- a/app/src/main/res/layout/item_picker.xml
+++ b/app/src/main/res/layout/item_picker.xml
@@ -18,7 +18,7 @@
 
     <TextView
         android:id="@+id/tv_city"
-        style="@style/AppTheme.TextView.Large.Black.Bold"
+        style="@style/AppTheme.TextView.Large.Title.Bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="48dp"
