--- a/app/src/main/res/layout/fragment_cinemas.xml
+++ b/app/src/main/res/layout/fragment_cinemas.xml
@@ -16,4 +16,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
+    <include
+        layout="@layout/layout_no_screenings"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </FrameLayout>
